# lsstypes

./: .gitignore  README.md  pyproject.toml
lsstypes/: __init__.py  base.py  external.py  spectrum.py  types.py  utils.py
nb/: basic_examples.ipynb  external_examples.ipynb
tests/: test.py
