[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "setuptools_scm>=6.2",
    "pip>=21.2",
]

[project]
name = "lsstypes"
authors = [{name = "Arnaud de Mattia"}]
description = "Data types for (compressed) LSS measurements (and covariance and window matrices)"
version = "0.1.0"
dependencies = ["numpy"]
readme = "README.md"
requires-python = ">=3.10"
urls = {Repository = "https://github.com/adematti/lsstypes"}
classifiers = ["Programming Language :: Python :: 3"]

[tool.setuptools]
packages = ["lsstypes"]
